declare_args() {
  mds_component_algo = true
  mds_component_boot = false
  mds_component_button = false
  mds_component_fs = false
  mds_component_fsm = true
  mds_component_topic = true
}

config("mds_component_cfg") {
  include_dirs = [ "inc/" ]
}

static_library("mds_component") {
  public_deps = []

  if (mds_component_algo) {
    public_deps += [ "src/algo/:mds_algo" ]
  }

  if (mds_component_boot) {
    public_deps += [ "src/boot/:mds_boot" ]
  }

  if (mds_component_button) {
    public_deps += [ "src/boot/:mds_button" ]
  }

  if (mds_component_fs) {
    public_deps += [ "src/fs/:mds_fs" ]
  }

  if (mds_component_fsm) {
    public_deps += [ "src/fsm/:mds_fsm" ]
  }

  if (mds_component_topic) {
    public_deps += [ "src/topic/:mds_topic" ]
  }
}
