declare_args() {
  mds_boot_upgrade_retry = 3
  mds_boot_upgrade_size = 1024
  mds_boot_upgrade_alloc = false
  mds_boot_upgrade_hash = true

  mds_boot_with_copy = true
  mds_boot_with_lzma = true
}

declare_args() {
  if (defined(mds_boot_with_lzma) && mds_boot_with_lzma) {
    mds_boot_lzma_read_size = 1024
    mds_boot_lzma_write_size = 1024
    mds_boot_lzma_dict_size = 4096
    mds_boot_lzma_probs_size = 10112
  }
}

pkggroup("mds_component/algo") {
}

if (defined(mds_boot_with_lzma) && mds_boot_with_lzma) {
  pkggroup("lzma_sdk") {
  }
}

config("mds_component_boot_config") {
  include_dirs = [ "inc/" ]
}

static_library("mds_component_boot") {
  sources = [ "src/mds_boot.c" ]
  defines = [ "MDS_BOOT_UPGRADE_SIZE=" + mds_boot_upgrade_size ]
  deps = []

  if (defined(mds_boot_upgrade_retry)) {
    defines += [ "MDS_BOOT_UPGRADE_RETRY=" + mds_boot_upgrade_retry ]
  }

  if (defined(mds_boot_upgrade_alloc) && mds_boot_upgrade_alloc) {
    defines += [ "MDS_BOOT_UPGRADE_ALLOC=1" ]
  } else {
    defines += [ "MDS_BOOT_UPGRADE_ALLOC=0" ]
  }

  if (defined(mds_boot_upgrade_hash) && mds_boot_upgrade_hash) {
    defines += [ "MDS_BOOT_UPGRADE_HASH=1" ]
  } else {
    defines += [ "MDS_BOOT_UPGRADE_HASH=0" ]
  }

  if (defined(mds_boot_with_copy) && mds_boot_with_copy) {
    defines += [ "MDS_BOOT_WITH_COPY=1" ]
  } else {
    defines += [ "MDS_BOOT_WITH_COPY=0" ]
  }

  if (defined(mds_boot_with_lzma) && mds_boot_with_lzma) {
    sources += [ "src/boot_lzma.c" ]
    defines += [
      "MDS_BOOT_WITH_LZMA=1",
      "MDS_BOOT_LZMA_READ_SIZE=" + mds_boot_lzma_read_size,
      "MDS_BOOT_LZMA_WRITE_SIZE=" + mds_boot_lzma_write_size,
      "MDS_BOOT_LZMA_DICT_SIZE=" + mds_boot_lzma_dict_size,
      "MDS_BOOT_LZMA_PROBS_SIZE=" + mds_boot_lzma_probs_size,
    ]
    deps += [ ":lzma_sdk" ]
  } else {
    defines += [ "MDS_BOOT_WITH_LZMA=0" ]
  }

  public_configs = [ ":mds_component_boot_config" ]

  public_deps = [ ":mds_component/algo" ]
}
