declare_args() {
  mds_filesystem_with_emfs = true
}

pkggroup("mds_kernel") {
}

if (defined(mds_filesystem_with_emfs) && mds_filesystem_with_emfs) {
  pkggroup("mds_component_emfs") {
  }
}

config("mds_component_fs_config") {
  include_dirs = [ "inc/" ]
}

static_library("mds_component_fs") {
  sources = [ "src/mds_fs.c" ]
  deps = []

  if (defined(mds_filesystem_with_emfs) && mds_filesystem_with_emfs) {
    sources += [ "src/fs_emfs.c" ]
    deps += [ ":mds_component_emfs" ]
  }

  public_configs = [ ":mds_component_fs_config" ]

  public_deps = [ ":mds_kernel" ]
}
